--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,8 @@ services:
       - "3000:3000"
     # env_file:
     #   - .env
-    # environment:
+    environment:
+      - RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
     #   DATABASE_URL: ${DATABASE_URL}
     # depends_on:
     #   - db
