--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,31 +7,37 @@ x-logging:
     max-file: "3"
 
 services:
-  # db:
-  #   image: postgres
-  #   env_file:
-  #     - .env
-  #   volumes:
-  #     - postgres:/var/lib/postgresql/data
-  #   restart: always
-  #   healthcheck:
-  #     test: pg_isready -U postgres -h 127.0.0.1
-  #     interval: 5s
-  #   logging: *logging
+
+  database:
+    image: postgres
+    volumes:
+      - dev_blog_data:/var/lib/postgresql/data
+      - ./init.sql/:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
+    ports:
+      - "5432:5432"
+    env_file:
+      - .env
+    restart: always
+    logging: *logging
+
   web:
     build: .
     restart: always
     ports:
       - "3000:3000"
-    # env_file:
-    #   - .env
+    env_file:
+      - .env
     environment:
       - RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
-    #   DATABASE_URL: ${DATABASE_URL}
-    # depends_on:
-    #   - db
+      - DATABASE_URL=${DATABASE_URL}
+    depends_on:
+      - database
     logging: *logging
 
-# volumes:
-#   postgres:
+volumes:
+  dev_blog_data:
 
