--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,6 +38,17 @@ services:
       - database
     logging: *logging
 
+  nginx:
+    image: nginx:latest
+    volumes:
+      - /.nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "80:80"
+    depends_on:
+      - web
+    logging: *logging
+
+
 volumes:
   dev_blog_data:
 
