--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,12 +42,19 @@ services:
     image: nginx:latest
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./certbot/www/:/var/www/certbot/:ro
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       - web
     logging: *logging
 
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
 
 volumes:
   dev_blog_data:
