--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,16 @@
 server {
     listen 80;
+    listen [::]:80;
 
     server_name dev_blog;
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
 
     location / {
+      return 301 https://blog.iaanjohnston.com$request_uri;
         proxy_pass http://web:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
