creates and mounts volume for app/storage in web application, to persist images between docker restarts

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,8 @@ services:
     depends_on:
       - database
     logging: *logging
+    volumes:
+      - dev_blog_storage:/app/storage
 
   nginx:
     image: nginx:latest
@@ -51,4 +53,5 @@ services:
 
 volumes:
   dev_blog_data:
+  dev_blog_storage:
 
